Project CareFlowPersonA {
  database_type: 'PostgreSQL'

  Note: '''
  Minimal database model for Person A.

  Owned services:
  - Identity Service (careflow_identity, port 8081)
  - Queue Service (careflow_queue, port 8084)
  - API Gateway, Eureka, and Notification are stateless and have no tables.

  This file intentionally keeps only the data required for the MVP/demo.
  patient_id, appointment_id, and department_id are logical IDs received from
  services owned by B. They MUST NOT become physical foreign keys.

  RabbitMQ input:
  - appointment.created
  - appointment.cancelled

  RabbitMQ output:
  - queue.number.assigned
  - queue.checked-in
  - queue.called
  - queue.missed
  - queue.completed
  - notification.send

  Conventions:
  - UUID values are generated by the application or PostgreSQL gen_random_uuid().
  - created_at/updated_at are timestamptz values stored in UTC.
  - version is used for optimistic locking.
  - Java enums map to PostgreSQL varchar + CHECK constraints in migrations.
  '''
}

// ---------------------------------------------------------------------------
// Shared enum
// ---------------------------------------------------------------------------

Enum event_delivery_status {
  PENDING
  PUBLISHED
  FAILED
}

// ---------------------------------------------------------------------------
// Identity Service - careflow_identity
// ---------------------------------------------------------------------------

Enum identity_user_role {
  PATIENT
  DOCTOR
  ADMIN
}

Enum identity_user_status {
  ACTIVE
  LOCKED
  DISABLED
}

Table identity.users {
  id uuid [pk]
  username varchar(50) [not null, unique]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [not null]
  role identity_user_role [not null, default: 'PATIENT']
  status identity_user_status [not null, default: 'ACTIVE']
  failed_login_attempts int [not null, default: 0]
  locked_until timestamptz
  last_login_at timestamptz
  version bigint [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (role, status) [name: 'idx_users_role_status']
  }

  Note: '''
  Minimum account data for register/login/JWT/RBAC.
  Migration rules:
  - username and email should be case-insensitive unique
  - password_hash stores BCrypt/Argon2 output only
  - failed_login_attempts must be >= 0
  Access-token-only auth is sufficient for the MVP. Add refresh_tokens later
  only if a refresh/revoke flow becomes an explicit requirement.
  '''
}

// ---------------------------------------------------------------------------
// Queue Service - careflow_queue
// ---------------------------------------------------------------------------

Enum queue_priority_level {
  EMERGENCY
  PRIORITY
  APPOINTMENT
  WALK_IN
}

Enum queue_entry_status {
  WAITING
  CHECKED_IN
  CALLED
  IN_PROGRESS
  COMPLETED
  MISSED
  CANCELLED
}

Enum queue_missed_policy {
  REQUEUE_FRONT
  REQUEUE_BACK
  REQUIRE_MANUAL
}

Enum queue_cycle_phase {
  PRIORITY
  NORMAL
}

Enum queue_normal_cursor {
  APPOINTMENT
  WALK_IN
}

Table queue.queue_configs {
  id uuid [pk]
  department_id uuid [not null, unique, note: 'Logical ref -> Appointment Service department']
  department_name_snapshot varchar(100) [not null]
  queue_prefix varchar(10) [not null]
  room_code varchar(50)
  priority_ratio_n smallint [not null, default: 2]
  normal_ratio_m smallint [not null, default: 1]
  avg_consultation_minutes smallint [not null, default: 15]
  near_turn_threshold smallint [not null, default: 3]
  missed_policy queue_missed_policy [not null, default: 'REQUEUE_BACK']
  scheduler_date date
  cycle_phase queue_cycle_phase [not null, default: 'PRIORITY']
  served_in_phase smallint [not null, default: 0]
  normal_cursor queue_normal_cursor [not null, default: 'APPOINTMENT']
  is_active boolean [not null, default: true]
  version bigint [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (id, department_id) [unique, name: 'uk_queue_config_context']
  }

  Note: '''
  One active queue configuration per department for the MVP.
  Migration checks:
  - priority_ratio_n > 0
  - normal_ratio_m > 0
  - avg_consultation_minutes > 0
  - near_turn_threshold > 0
  - served_in_phase >= 0
  EMERGENCY always bypasses the N:M interleaving rule.
  scheduler_date, cycle_phase, served_in_phase, and normal_cursor are runtime
  scheduler state. Reset the phase/counter/cursor when the business date changes,
  and lock this row in the same transaction that changes an entry to CALLED.
  '''
}

Table queue.queue_number_sequences {
  id uuid [pk]
  queue_config_id uuid [not null]
  queue_date date [not null]
  last_number int [not null, default: 0]
  version bigint [not null, default: 0]
  updated_at timestamptz [not null]

  indexes {
    (queue_config_id, queue_date) [unique, name: 'uk_queue_number_sequence']
  }

  Note: '''
  Atomically increments the daily human-facing queue number.
  last_number must be >= 0. Lock this row or use optimistic retry when assigning.
  '''
}

Table queue.queue_entries {
  id uuid [pk]
  queue_config_id uuid [not null]
  department_id uuid [not null, note: 'Logical ref -> Appointment Service department']
  appointment_id uuid [unique, note: 'Logical ref -> Appointment Service; null for walk-in/emergency']
  patient_id uuid [not null, note: 'Logical ref -> Patient Service patient']
  user_id uuid [not null, note: 'Logical ref -> Identity Service user; used for authenticated WebSocket delivery']
  queue_date date [not null]
  sequence_number int [not null]
  queue_number varchar(20) [not null]
  priority_level queue_priority_level [not null]
  status queue_entry_status [not null, default: 'WAITING']
  checked_in_at timestamptz
  eligible_since_at timestamptz
  called_at timestamptz
  started_at timestamptz
  completed_at timestamptz
  missed_at timestamptz
  cancelled_at timestamptz
  missed_count smallint [not null, default: 0]
  estimated_wait_minutes int
  version bigint [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (queue_config_id, queue_date, queue_number) [unique, name: 'uk_queue_number_per_day']
    (queue_config_id, queue_date, status, priority_level, eligible_since_at, sequence_number) [name: 'idx_queue_next_candidate']
    (patient_id, queue_date) [name: 'idx_queue_patient_date']
    (user_id, queue_date) [name: 'idx_queue_user_date']
  }

  Note: '''
  appointment_id is nullable unique, making AppointmentCreated idempotent while
  still allowing walk-in and emergency entries.

  Do not persist position_in_queue: calculate it from the N:M algorithm because
  the position changes whenever a patient checks in, is called, missed, or cancelled.

  eligible_since_at is the mutable scheduling order. Set it on check-in, preserve
  the original value for REQUEUE_FRONT, and set it to the requeue time for
  REQUEUE_BACK. The human-facing sequence_number and queue_number never change.

  Migration checks:
  - sequence_number > 0
  - missed_count >= 0
  - estimated_wait_minutes >= 0 when present
  - eligible_since_at is required for CHECKED_IN/CALLED/IN_PROGRESS/COMPLETED/MISSED
  - status-specific timestamps are validated in the service layer
  '''
}

Table queue.outbox_events {
  event_id uuid [pk]
  aggregate_type varchar(50) [not null]
  aggregate_id uuid [not null]
  event_type varchar(100) [not null]
  event_version int [not null, default: 1]
  aggregate_version bigint [not null]
  exchange_name varchar(100) [not null]
  routing_key varchar(100) [not null]
  payload jsonb [not null]
  status event_delivery_status [not null, default: 'PENDING']
  attempts int [not null, default: 0]
  occurred_at timestamptz [not null]
  next_attempt_at timestamptz [not null]
  published_at timestamptz
  last_error text
  created_at timestamptz [not null]

  indexes {
    (status, next_attempt_at, created_at) [name: 'idx_queue_outbox_pending']
    (aggregate_id, aggregate_version) [name: 'idx_queue_outbox_aggregate']
  }

  Note: '''
  Written in the same transaction as queue state changes.
  Used for QueueNumberAssigned, QueueCheckedIn, QueueCalled, QueueMissed,
  QueueCompleted, and notification events.
  attempts must be >= 0.
  '''
}

Table queue.processed_events {
  event_id uuid [not null]
  consumer_name varchar(100) [not null]
  event_type varchar(100) [not null]
  processed_at timestamptz [not null]

  indexes {
    (event_id, consumer_name) [pk, name: 'pk_queue_processed_events']
  }

  Note: '''
  Consumer inbox/idempotency for AppointmentCreated and AppointmentCancelled.
  Insert this row and update queue domain data in the same transaction.
  '''
}

Ref queue_sequence_config: queue.queue_number_sequences.queue_config_id > queue.queue_configs.id [delete: restrict]

Ref queue_entry_config_context: queue.queue_entries.(queue_config_id, department_id) > queue.queue_configs.(id, department_id) [delete: restrict]

// QR check-in is intentionally stateless for the MVP:
// sign appointment_id + expiry with JWT/HMAC. Replays are idempotent because an
// already CHECKED_IN queue entry remains CHECKED_IN. Add a token table only when
// single-use revocation becomes an explicit requirement.
